falta apenas o teste de sobrepostas

--- a/src/main/webapp/template/template.xhtml
+++ b/src/main/webapp/template/template.xhtml
@@ -16,7 +16,7 @@
     <h:body>        
         <p:growl sticky="true"/>
         <p:layout fullPage="true">
-            <p:layoutUnit position="north" size="100" header="SMD" resizable="true" collapsible="true">
+            <p:layoutUnit position="north" size="100" header="SMD - SISTEMA DE MARCAÇÃO DE DIÁRIAS OPERACIONAIS" resizable="true" collapsible="true">
                 <h:form>
                     <h:commandLink value="Início" action="index"/>                    
                 </h:form>
